# JuceEQ

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Source/: BandControlsComponent.cpp  BandControlsComponent.h  EqGraphComponent.cpp  EqGraphComponent.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
